FEAT: finish section 1.1.4.

--- a/review.adoc
+++ b/review.adoc
@@ -86,21 +86,15 @@ Compact and human-friendly code constitutes an integral part of VID's appeal; ov
 
 The nature of VID as an eDSL is a double edged sword: it is a language with a well-defined problem domain and semantics, which nethertheless is embedded in the host, and relies on the behavior of its datatypes with evaluation model. Such "chimerical" nature of Red dialects provides the necessary leverage and reduces the complexity of a given task, but is often tends to be misunderstood: either by ignoring dialect's specificities or by forgetting its relation to the base language.
 
-Arguably, one the most problematic aspect of Red GUI system is it's reliance on language's name resolution mechanism called "binding" or sometimes "definitional scoping", coupled with an absence of modules or easy ways to localize or re-bind names without writing boilerplate code. Symbolic identifiers introduced in VID block (for example, in the body of an event handler) by default resolve to the global namespace, and often tend to shadow other definitions, which leads to hard to catch bugs.footnote:[See one of the https://github.com/red/red/issues/972#issuecomment-650814221[examples] on Red issue tracker, derived during the implementation of link:tasks/CRUD.red[CRUD] task.] Granted, this problem is not unique to VID, but rather presents a historical design challenge in the Rebol family of languages.
+Arguably, one the most problematic aspect of Red GUI system is it's reliance on language's name resolution mechanism called "binding" or sometimes "definitional scoping" coupled with an absence of modules or easy ways to localize or re-bind names without writing boilerplate code. Symbolic identifiers introduced in VID block (for example, in the body of an event handler) by default resolve to the global namespace, and often tend to shadow other definitions, which leads to hard to catch bugs.footnote:[See one of the https://github.com/red/red/issues/972#issuecomment-650814221[examples] on Red issue tracker, derived during the implementation of link:tasks/CRUD.red[CRUD] task.] Granted, this problem is not unique to VID, but rather presents a historical design challenge in the Rebol family of languages.
 
 Another error-prone element is the structure of indirect values in Red -- that is, values that contain references to external, mutable and shareable data buffers. Modification of a buffer via one indirect value affects all the other indirect values that share the same buffer, unless said buffer is explicitly copied beforehand. While Red employs only call-by-value convention, to the uninitiated this language feature comes close to Java’s different calling semantics for primitive and reference types. In the context of View and VID, this comes up when facets (most commonly `data` or `text`) are re-used in many complex relations, or when a VID block containing indirect values (such as `string!` or `block!`) is generated with the help of meta-programming facilities.
 
-View engine presents virtual tree of faces as a data-oriented, minimal programming interface to the underlying graphical backend. The source of errors in it are not the hierarchical and reactive relations between faces,footnote:[The opposite happens in the rare cases where a tree of faces is constructed by hand and various hierarchical requirements (e.g. `screen` face as tree's root, double-linking of faces, specification of their types and event handlers) need to be fulfilled.] but the variability of facet's values. Objects' fields are not typed, in a sense that they can be set to any value, which in turn brings out a specific behavior dictated by its datatype. For example, in `color` facet, `tuple!` values change widget's background color, and `none!` value resets it to a default setting.
+View engine presents virtual tree of faces as a data-oriented, minimal programming interface to the underlying graphical backend. The common source of errors in it are not the hierarchical and reactive relations between faces,footnote:[The opposite happens in the rare cases where a tree of faces is constructed by hand and various hierarchical requirements (e.g. `screen` face as tree's root, double-linking of faces, specification of their types and event handlers) need to be fulfilled.] but the variability of facet's values. Objects' fields are not typed, in a sense that they can be set to any value, which in turn brings out a specific behavior dictated by its datatype. For example, in `color` facet, `tuple!` values change widget's background color, and `none!` value resets it to a default setting.
 
-Given that VID recognizes both `tuple!` (RGBA) and `issue!` (hex-encoded) values as valid color denotations, a common mistake is to set `color` facet to `issue!` and expect a change in the background, whereas this setting is simply ignored.
+Given that VID recognizes both `tuple!` (RGBA) and `issue!` (hex-encoded) values as valid color denotations, a common mistake is to set `color` facet to `issue!` and expect a change in the background, whereas this setting is simply ignored. What seems to be required in such cases is _operational specification_, which would limit a given facet to a limited number of datatypes, and further restrict values on these datatypes to an allowed range: for example, `issue!` values that hex-encode colors, or `tuple!` values with strictly 3 or 4 elements. Object ownership system, on which the reactive framework is based, can achieve that.footnote:[See `system/locale/currencies` object, designed as a proof-of-concept for such form of object field's protocoling; it monitors the list of currencies and enforces only specific set of user interactions with it, constraining the content of the list not only to the values of specific datatype, but values with specific properties _within_ the datatype.]
 
-NOTE: TBD.
-
-Operational specification, protocoling (repurpose https://gitter.im/red/red?at=5f24151036563560f2b4cb06[this]), constraints (such as immutability).
-
-Secure dialect as a "bondage & discipline" for this general class of problems + ownership system.
-
-The question of GUI testing: manual, automatic, generative, Clojure spec, link to Boris' https://gitlab.com/hiiamboris/red-view-test-system[Red/View testing framework]. Existence of the https://www.red-lang.org/2017/07/063-macos-gui-backend.html[null backend] (at the beginning of "View engine" section).
+Finally, errors can emerge during the user interaction with a created GUI: an unspecified event handler, a missed edge-case, an unanticipated scenario; manual or automated GUI testing can catch this form of mistakes, but is quite non-trivial to implement in platform-independent way. The initial work on https://gitlab.com/hiiamboris/red-view-test-system[Red/View testing framework] and existence of the https://www.red-lang.org/2017/07/063-macos-gui-backend.html[null backend] (described at the beginning of "View engine" section) set the stage for this line of development.
 
 #### Diffuseness
 
