FEAT: finish section 1.1.6.

--- a/review.adoc
+++ b/review.adoc
@@ -238,40 +238,23 @@ It follows that the Red implementation under discussion is the smallest fully fu
 
 Indeed, Red programs generally show low levels of diffuseness and boilerplate, without extreme density (cf. APL family). Speaking of VID, not only the line count in it is low, but the number of distinct notational elements (at the level of symbolic description) is also quite modest: any given VID specification includes information about widget's positioning, the content of its facets, and provided event handlers. Parelleling the HTML/CSS/JS trichotomy, we might call these aspects _structure_, _style_ and _substance_.footnote:[Taking a certain ontological stance, one can name these aspects _essences_ that, when combined, form the notational entities.]
 
-The main factors contributing to near-absence of diffuseness are meta-programming facilities (e.g. generating spreadsheet in <<_cells, Cells>>) and high degree of polymorphism: a small set of core primitives working seamlessly across the board, and acting on value literals that can produce the meaning of their own; syntax determines semantics.
+The main factors contributing to near-absence of diffuseness are meta-programming facilities (e.g. generating spreadsheet in <<_cells, Cells>>) and data-orientation: a small set of core primitives working seamlessly across the board, and acting on value literals that can produce the meaning of their own; syntax determines semantics.
 
 #### Viscosity
 
 > Are there any inherent barriers to change in the notation? How much effort is required to make a change to a program expressed in the notation?
 
-Inherent dynamism and flexibility (and hense a low viscosity) of the Rebol family of languages always made it an appealing target for rapid code prototyping, as evidenced by a multitude of hot code reloading and live editing tools developed with it.footnote:[See https://www.red-lang.org/2016/07/eve-style-clock-demo-in-red-livecoded.html[Eve clock demo] and https://github.com/toomasv/layout-editor[UI mockup editor] as examples.] 3 factors play role in that:
+Inherent dynamism and flexibility (and hense a low viscosity) always made the Rebol family of languages an appealing target for rapid code prototyping, as evidenced by a multitude of hot code reloading and live editing tools developed with it.footnote:[See https://www.red-lang.org/2016/07/eve-style-clock-demo-in-red-livecoded.html[Eve clock demo] and https://github.com/toomasv/layout-editor[UI mockup editor] as examples.] 3 factors play key role in that:
 
 Homoiconic property:: By the virtue of which Red is not only a programming language, but also its own data format. That encourages keeping the programs data-driven, decoupled form frequently changing aspects that get factored out into dedicated textual configuration files and can be serialized into binary form if needed.
 High degree of polymorphism:: Changing the datatype without changing the underlying interface (for example by switching between different types of `series!`) often requires little to no changes within the rest of the program.
-Object ownership model:: blah, so-called https://en.wikipedia.org/wiki/Autonomic_computing#Characteristics_of_autonomic_systems[self-* properties]; reactive framework built on top of it is what actually drives the responsiveness of the View engine. 
+Object ownership system:: Which endows entities within a language with so-called https://en.wikipedia.org/wiki/Autonomic_computing#Characteristics_of_autonomic_systems[self-* properties], giving them a certain degree of autonomy and allowing creation of various high-level frameworks and paradigms: forms of self-healing and self-protecting code, design by contract, etc. Reactive framework built on top of object ownership is what actually drives the responsiveness of the View engine. No changes need to be made, since the program can react and adapt to them by itself.
 
+The questions of high viscosity is closely tied to intentionality: unintentional barriers to change inhibit the development process and require unwanted efforts to bypass them. At the same time, notation can introduce such barriers in order to prohibit certain unidiomatic operations within the framework by making them more difficult (e.g. constructing virtual tree of faces by hand rather than writing at least parts of it in declarative VID specifications), thus forcing the user to adopt a specific problem-solving mindset (cf. design patterns). Red posits itself as paradigm-neutral language in this regard and does not stand in the way, although it certainly lacks a proper support for functional programming.
 
-NOTE: TBD.
+As the program evolves from a minimal viable product (MVP) to production-ready application, its degree of viscosity also changes from flexibility to rigidity, accruing constraints and baked-in assumptions. With Red, very often the issue is not an excess of resistance to change, but rather the lack of it; and so the language perfectly fits the requirements of prototyping stages, where the speed of delivery, navigation of design space and communication with domain experts is more important than performance or even correctness. In some settings this turns out to be more than enough, and for others the application can be rewritten in a different notation (i.e. ported to a different language/framework) with desirable level of rigidity and strictness, e.g. static type discipline and amenability to formal proof.
 
-Something more specific to VID? Brag about 3S as a separation of configuration options (use-cases?), which of them exibit which degree of viscosity, at what stages of development (development, prototyping, mainteance)? Progression from less to more viscious over the course of the system growth, towards more constraints and baked-in assumptions.
-
-No deps., plug-and-play, single 1MB binary, little to no dependencies (only temporal during bootstrapping phase)
-
-Low level of viscosity is made possible by the synergy of language properties, such as homoiconicity, high degree of polymorphism, syntactically-rich type system and general orientation towards linguistic abstraction and simple semantics of all operations; indeed, both VID and View are the prime examples of this approach towards language design.
-
-Very often the problem is not an excess of resistance to change, but the lack of it. Data-driven, configuration.
-
-The whole reactive paradigm: just write the ownership code, the changes will be applied themselves, automagially.
-
-Working on specification of each face separately, but not as a group? E.g. what if I want to move all the widgets up by X -- then you just adjust the origin. What if I want to introduce new element into relation (e.g. bx transform as in temperature converter) -- that would require introducing a mediating reactor from the get-go instead of interlinking every face with every other one.
-
-View engine helps, but at time you need to go against the grain (e.g. auto-layout engine interfering with buttons in CRUD).
-
-Automated vs. deferred updating (contrast with Rebol?).
-
-Intentional viscosity: if it's hard to do then it's probably a wrong/unidiomatic solution (e.g. constructing virtual tree of faces by hand).
-
-low viscocity, then ported to a target language with high viscosity, more rigid. NoCode, LowCode.
+Last but not least, in case of GUIs the biggest resistance to change comes from the differences between supported platforms: each of them enforces specific interface design guidelines and provides widgets that differ not only in form, but also in function. View provides rule-oriented GUI rewriting engine, capable of modifying a virtual tree of faces dynamically according to pre-defined platform-specific rules, such as button ordering and capitalization of widget's labels.footnote:[See `system/view/VID/GUI-rules` for details.]
 
 ## Tasks
 
